# Mainframe_Anonymizer

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.claude/: settings.json
docs/: questions-for-team.md  seed-masking.md
docs/superpowers/plans/: 2026-07-16-mainframe-anonymizer.md
docs/superpowers/specs/: 2026-07-15-mainframe-anonymizer-design.md
samples/copybooks/: account.cpy  customer.cpy
src/anonymizer/: audit.py  pipeline.py  seedstore.py
src/anonymizer/codec/: binary.py  dispatch.py  packed.py  text.py  zoned.py
src/anonymizer/copybook/: cb2xml_runner.py  model.py  xml_mapper.py
src/anonymizer/engine/: reader.py  writer.py
src/anonymizer/masking/: classifier.py  deterministic.py  luhn.py  rules.py
src/anonymizer/ui/: helpers.py  steps.py
tests/: test_app.py  test_audit.py  test_cb2xml_runner.py  test_classifier.py  test_codec_binary.py  test_codec_packed.py  test_codec_text.py  test_codec_zoned.py  test_deterministic.py  test_dispatch.py  test_golden.py  test_luhn.py  test_model.py  test_pipeline.py  test_reader_writer.py  test_rules.py  test_sanity.py  test_seedstore.py  test_ui_helpers.py  test_xml_mapper.py
tools/: generate_samples.py
