[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mainframe-anonymizer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["streamlit>=1.35", "Faker>=25", "pandas>=2"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/anonymizer/ui/steps.py"]
